--- a/about.html
+++ b/about.html
@@ -18,9 +18,8 @@
  <main class="apresentacao">
     <section class="apresentacao__conteudo">
         <h1 class="apresentacao__conteudo__titulo">Sobre mim</h1>
-        <p class="apresentacao__conteudo__texto">Lorem ipsum dolor sit amet consectetur adipisicing elit. Suscipit, aperiam aspernatur molestias et tempora ab numquam fugiat ut sed enim saepe eos veniam impedit earum delectus nulla consequatur quia alias?</p>
-        <p class="apresentacao__conteudo__texto">Lorem ipsum dolor sit amet consectetur adipisicing elit. Maiores tempore, est doloremque eaque assumenda asperiores explicabo aliquid ullam excepturi ipsam iure repellat officia atque aspernatur veritatis! Eaque rem blanditiis ab? Lorem ipsum dolor sit amet consectetur adipisicing elit. Deserunt culpa ipsum cumque quae soluta? Repellendus unde exercitationem accusamus cum quaerat voluptatibus nemo alias ut architecto cupiditate quis provident, animi quo.
-        </p>
+        <p class="apresentacao__conteudo__texto">Sou Luiz Henrique, um desenvolvedor front-end apaixonado por tecnologia e dedicado a aprimorar minhas habilidades em HTML e CSS. Recentemente, tenho investido meu tempo em cursos online, projetos pessoais e tutoriais, buscando sempre novas formas de me desafiar e aprender. Com um olhar atento para detalhes e um senso estético apurado, crio páginas web limpas e funcionais, focadas em proporcionar a melhor experiência possível para os usuários.</p>
+        <p class="apresentacao__conteudo__texto">Agora, estou à procura de uma oportunidade para aplicar o que aprendi em um ambiente profissional. Estou ansioso para colaborar com equipes talentosas, aprender com mentores experientes e contribuir para projetos inovadores. Com minha determinação e paixão pelo desenvolvimento front-end, estou pronto para enfrentar novos desafios e crescer na indústria da tecnologia.
     </section>
     <img class="apresentacao_imagem" src="WhatsApp Image 2023-10-27 at 16.55.42.jpeg" alt="Foto de perfil">
  </main>
